src/rocksdb_c.nim


proc rocksdb_writebatch_create*(): ptr rocksdb_writebatch_t {.cdecl,
    importc: "rocksdb_writebatch_create", dynlib: librocksdb.}
proc rocksdb_writebatch_create_from*(rep: cstring; size: csize): ptr rocksdb_writebatch_t {.
    cdecl, importc: "rocksdb_writebatch_create_from", dynlib: librocksdb.}
proc rocksdb_writebatch_destroy*(a2: ptr rocksdb_writebatch_t) {.cdecl,
    importc: "rocksdb_writebatch_destroy", dynlib: librocksdb.}
proc rocksdb_writebatch_clear*(a2: ptr rocksdb_writebatch_t) {.cdecl,
    importc: "rocksdb_writebatch_clear", dynlib: librocksdb.}
proc rocksdb_writebatch_count*(a2: ptr rocksdb_writebatch_t): cint {.cdecl,
    importc: "rocksdb_writebatch_count", dynlib: librocksdb.}
proc rocksdb_writebatch_put*(a2: ptr rocksdb_writebatch_t; key: cstring; klen: csize;
                            val: cstring; vlen: csize) {.cdecl,
    importc: "rocksdb_writebatch_put", dynlib: librocksdb.}
proc rocksdb_writebatch_put_cf*(a2: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                               key: cstring; klen: csize; val: cstring; vlen: csize) {.
    cdecl, importc: "rocksdb_writebatch_put_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_putv*(b: ptr rocksdb_writebatch_t; num_keys: cint;
                             keys_list: cstringArray; keys_list_sizes: ptr csize;
                             num_values: cint; values_list: cstringArray;
                             values_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_putv", dynlib: librocksdb.}
proc rocksdb_writebatch_putv_cf*(b: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                num_keys: cint; keys_list: cstringArray;
                                keys_list_sizes: ptr csize; num_values: cint;
                                values_list: cstringArray;
                                values_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_putv_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_merge*(a2: ptr rocksdb_writebatch_t; key: cstring;
                              klen: csize; val: cstring; vlen: csize) {.cdecl,
    importc: "rocksdb_writebatch_merge", dynlib: librocksdb.}
proc rocksdb_writebatch_merge_cf*(a2: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                 key: cstring; klen: csize; val: cstring; vlen: csize) {.
    cdecl, importc: "rocksdb_writebatch_merge_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_mergev*(b: ptr rocksdb_writebatch_t; num_keys: cint;
                               keys_list: cstringArray;
                               keys_list_sizes: ptr csize; num_values: cint;
                               values_list: cstringArray;
                               values_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_mergev", dynlib: librocksdb.}
proc rocksdb_writebatch_mergev_cf*(b: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                  num_keys: cint; keys_list: cstringArray;
                                  keys_list_sizes: ptr csize; num_values: cint;
                                  values_list: cstringArray;
                                  values_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_mergev_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_delete*(a2: ptr rocksdb_writebatch_t; key: cstring;
                               klen: csize) {.cdecl,
    importc: "rocksdb_writebatch_delete", dynlib: librocksdb.}
proc rocksdb_writebatch_delete_cf*(a2: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                  key: cstring; klen: csize) {.cdecl,
    importc: "rocksdb_writebatch_delete_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_deletev*(b: ptr rocksdb_writebatch_t; num_keys: cint;
                                keys_list: cstringArray;
                                keys_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_deletev", dynlib: librocksdb.}
proc rocksdb_writebatch_deletev_cf*(b: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                   num_keys: cint; keys_list: cstringArray;
                                   keys_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_deletev_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_delete_range*(b: ptr rocksdb_writebatch_t;
                                     start_key: cstring; start_key_len: csize;
                                     end_key: cstring; end_key_len: csize) {.cdecl,
    importc: "rocksdb_writebatch_delete_range", dynlib: librocksdb.}
proc rocksdb_writebatch_delete_range_cf*(b: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                        start_key: cstring; start_key_len: csize;
                                        end_key: cstring; end_key_len: csize) {.
    cdecl, importc: "rocksdb_writebatch_delete_range_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_delete_rangev*(b: ptr rocksdb_writebatch_t; num_keys: cint;
                                      start_keys_list: cstringArray;
                                      start_keys_list_sizes: ptr csize;
                                      end_keys_list: cstringArray;
                                      end_keys_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_delete_rangev", dynlib: librocksdb.}
proc rocksdb_writebatch_delete_rangev_cf*(b: ptr rocksdb_writebatch_t;
    column_family: ptr rocksdb_column_family_handle_t; num_keys: cint;
    start_keys_list: cstringArray; start_keys_list_sizes: ptr csize;
    end_keys_list: cstringArray; end_keys_list_sizes: ptr csize) {.cdecl,
    importc: "rocksdb_writebatch_delete_rangev_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_put_log_data*(a2: ptr rocksdb_writebatch_t; blob: cstring;
                                     len: csize) {.cdecl,
    importc: "rocksdb_writebatch_put_log_data", dynlib: librocksdb.}
proc rocksdb_writebatch_iterate*(a2: ptr rocksdb_writebatch_t; state: pointer; put: proc (
    a2: pointer; k: cstring; klen: csize; v: cstring; vlen: csize) {.cdecl.}; deleted: proc (
    a2: pointer; k: cstring; klen: csize) {.cdecl.}) {.cdecl,
    importc: "rocksdb_writebatch_iterate", dynlib: librocksdb.}
proc rocksdb_writebatch_data*(a2: ptr rocksdb_writebatch_t; size: ptr csize): cstring {.
    cdecl, importc: "rocksdb_writebatch_data", dynlib: librocksdb.}
proc rocksdb_writebatch_set_save_point*(a2: ptr rocksdb_writebatch_t) {.cdecl,
    importc: "rocksdb_writebatch_set_save_point", dynlib: librocksdb.}
proc rocksdb_writebatch_rollback_to_save_point*(a2: ptr rocksdb_writebatch_t;
    errptr: cstringArray) {.cdecl,
                          importc: "rocksdb_writebatch_rollback_to_save_point",
                          dynlib: librocksdb.}
proc rocksdb_writebatch_pop_save_point*(a2: ptr rocksdb_writebatch_t;
                                       errptr: cstringArray) {.cdecl,
    importc: "rocksdb_writebatch_pop_save_point", dynlib: librocksdb.}
##  Write batch with index
